--- a/index.html
+++ b/index.html
@@ -28,7 +28,22 @@
 					</li>
 				</ul>
 			</nav>
-
+			<!-- hero -->
+			<section class="hero">
+				<!-- h1 ... h6 -->
+				<h1>Codimusic: Escucha música desde cualquier lugar</h1>
+				<h5>
+					Prueba nuestra aplicación web!
+				</h5>
+			</section>
+			<div>
+				<button class="btn-white">
+					Get Started
+				</button>
+				<button class="btn-white">
+					Prueba Gratis
+				</button>
+			</div>
 		</header>
 	</body>
 </html>
