--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
 						Prueba Gratis
 					</button>
 				</div>
+				<img	
+					src="assets/img/visual_desktop.png"
+					alt="imagen apps"
+					class="img_apps"
+				>
 			</section>
 		</header>
 	</body>
