--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<!-- Disclaimer, solo voy a hacer las partes estrictamente más importantes -->
 		<meta charset="UTF-8">
 		<title>CodiMusic</title>
+		<!-- agregamos nuestro css -->
+		<link rel="stylesheet" href="css/estilos.css">
 	</head>
 	<body>
 		<!-- class ? -->
