--- a/conceptos/01-position/position.html
+++ b/conceptos/01-position/position.html
@@ -10,7 +10,7 @@
 <body>
 	<section class="papa">
 		<div class="hijo caja1">cajita</div>
-		<div class="hijo caja2">cajita</div>
+		<div class="hijo caja2">cajita2</div>
 		<div class="hijo caja3">cajita</div>
 		<div class="hijo caja4">cajita</div>
 	</section>
