--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+		<!-- font-awesome -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<!-- agregamos nuestro css -->
 		<link rel="stylesheet" href="css/estilos.css">
 	</head>
@@ -18,7 +20,7 @@
 		<header class="gradiente">
 			<nav class="navegacion contenedor">
 				<h2 class="logo">
-					CodiMusic
+					<i class="fas fa-headphones-alt"></i>CodiMusic
 				</h2>
 				<!-- unordered list, lista desordenada -->
 				<ul class="links">
