--- a/index.html
+++ b/index.html
@@ -57,5 +57,25 @@
 				>
 			</section>
 		</header>
+
+		<!-- main - principal -->
+		<main>
+			<div class="contenedor">
+				<!-- caracteristicas -->
+				<section class="caracteristicas">
+					<h2>CodiMusic ha sido construido especialmente para tí</h2>
+					<div class="tarjetas">
+						<div class="tarjeta">
+							<img src="assets/img/idea.png" alt="icon_idea">
+							<h4>Descubre</h4>
+							<p>
+								Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa error beatae perspiciatis expedita tempora labore corporis voluptatem molestias quod. Dolore dolorum quaerat deleniti perspiciatis placeat voluptates? Architecto accusamus quam nostrum.
+							</p>
+							<a href="#">Conocer más</a>
+						</div>
+					</div>
+				</section>
+			</div>
+		</main>
 	</body>
 </html>
