--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
                             <h4>Descubre</h4>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa error beatae
-                                perspiciatis expedita tempora labore corporis voluptatem molestias quod. Dolore dolorum
-                                quaerat deleniti perspiciatis placeat voluptates? Architecto accusamus quam nostrum.
+                                perspiciatis expedita tempora labore corporis voluptatem molestias quod. 
                             </p>
                             <a href="#">Conocer más</a>
                         </div>
@@ -75,8 +74,7 @@
                             <h4>Descubre</h4>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa error beatae
-                                perspiciatis expedita tempora labore corporis voluptatem molestias quod. Dolore dolorum
-                                quaerat deleniti perspiciatis placeat voluptates? Architecto accusamus quam nostrum.
+                                perspiciatis expedita tempora labore corporis voluptatem molestias quod. 
                             </p>
                             <a href="#">Conocer más</a>
                         </div>
@@ -86,8 +84,7 @@
                             <h4>Descubre</h4>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa error beatae
-                                perspiciatis expedita tempora labore corporis voluptatem molestias quod. Dolore dolorum
-                                quaerat deleniti perspiciatis placeat voluptates? Architecto accusamus quam nostrum.
+                                perspiciatis expedita tempora labore corporis voluptatem molestias quod. 
                             </p>
                             <a href="#">Conocer más</a>
                         </div>
