--- a/index.html
+++ b/index.html
@@ -90,6 +90,23 @@
                         </div>
                     </div>
                 </section>
+
+				<!-- funcionalidades -->
+				<div class="contenedor">
+					<section class="funcionalidades">
+						<div class="func_descripcion">
+							<!-- texto -->
+							<h2>Descubre canciones en todo momento</h2>
+							<p>
+								Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima necessitatibus facilis aliquid voluptas ad, impedit modi veritatis tempora mollitia corporis iusto non placeat perferendis quae deleniti voluptatum, assumenda ipsum nisi.
+							</p>
+							<button class="btn_verde">Descubre!</button>
+						</div>
+						<div class="func_imagen">
+							<img src="assets/img/mini_screen.png">
+						</div>
+					</section>
+				</div>
             </div>
         </main>
     </body>
