--- a/index.html
+++ b/index.html
@@ -107,6 +107,18 @@
 						</div>
 					</section>
 				</div>
+
+				<!-- registrate -->
+				<section class="registrate">
+					<div class="contenedor accion">
+						<h2>Regístrate con nosotros</h2>
+						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore, quas sed officiis eius, labore voluptates nesciunt, molestiae minus odio repudiandae assumenda nobis dicta. Autem sunt praesentium suscipit, consequatur quia dicta?</p>
+						<form>
+							<input type="email" placeholder="Ingrese su email">
+							<button type="submit" class="btn_verde">Registrate</button>
+						</form>
+					</div>
+				</section>
             </div>
         </main>
     </body>
