--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <h4>Descubre</h4>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa error beatae
-                                perspiciatis expedita tempora labore corporis voluptatem molestias quod. 
+                                perspiciatis expedita tempora labore corporis voluptatem molestias quod.
                             </p>
                             <a href="#">Conocer más</a>
                         </div>
@@ -74,7 +74,7 @@
                             <h4>Descubre</h4>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa error beatae
-                                perspiciatis expedita tempora labore corporis voluptatem molestias quod. 
+                                perspiciatis expedita tempora labore corporis voluptatem molestias quod.
                             </p>
                             <a href="#">Conocer más</a>
                         </div>
@@ -84,42 +84,48 @@
                             <h4>Descubre</h4>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa error beatae
-                                perspiciatis expedita tempora labore corporis voluptatem molestias quod. 
+                                perspiciatis expedita tempora labore corporis voluptatem molestias quod.
                             </p>
                             <a href="#">Conocer más</a>
                         </div>
                     </div>
                 </section>
-
-				<!-- funcionalidades -->
-				<div class="contenedor">
-					<section class="funcionalidades">
-						<div class="func_descripcion">
-							<!-- texto -->
-							<h2>Descubre canciones en todo momento</h2>
-							<p>
-								Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima necessitatibus facilis aliquid voluptas ad, impedit modi veritatis tempora mollitia corporis iusto non placeat perferendis quae deleniti voluptatum, assumenda ipsum nisi.
-							</p>
-							<button class="btn_verde">Descubre!</button>
-						</div>
-						<div class="func_imagen">
-							<img src="assets/img/mini_screen.png">
-						</div>
-					</section>
-				</div>
-
-				<!-- registrate -->
-				<section class="registrate">
-					<div class="contenedor accion">
-						<h2>Regístrate con nosotros</h2>
-						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore, quas sed officiis eius, labore voluptates nesciunt, molestiae minus odio repudiandae assumenda nobis dicta. Autem sunt praesentium suscipit, consequatur quia dicta?</p>
-						<form>
-							<input type="email" placeholder="Ingrese su email">
-							<button type="submit" class="btn_verde">Registrate</button>
-						</form>
-					</div>
-				</section>
             </div>
+
+            <!-- funcionalidades -->
+            <div class="contenedor">
+                <section class="funcionalidades">
+                    <div class="func_descripcion">
+                        <!-- texto -->
+                        <h2>Descubre canciones en todo momento</h2>
+                        <p>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima necessitatibus facilis
+                            aliquid voluptas ad, impedit modi veritatis tempora mollitia corporis iusto non placeat
+                            perferendis quae deleniti voluptatum, assumenda ipsum nisi.
+                        </p>
+                        <button class="btn_verde">Descubre!</button>
+                    </div>
+                    <div class="func_imagen">
+                        <img src="assets/img/mini_screen.png" />
+                    </div>
+                </section>
+            </div>
+
+            <!-- registrate -->
+            <section class="registrate">
+                <div class="contenedor accion">
+                    <h2>Regístrate con nosotros</h2>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore, quas sed officiis eius,
+                        labore voluptates nesciunt, molestiae minus odio repudiandae assumenda nobis dicta. Autem sunt
+                        praesentium suscipit, consequatur quia dicta?
+                    </p>
+                    <form>
+                        <input type="email" placeholder="Ingrese su email" />
+                        <button type="submit" class="btn_verde">Registrate</button>
+                    </form>
+                </div>
+            </section>
         </main>
     </body>
 </html>
