--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 
             <!-- registrate -->
             <section class="registrate">
+				<div class="mascara gradiente"></div>
                 <div class="contenedor accion">
                     <h2>Regístrate con nosotros</h2>
                     <p>
