--- a/conceptos/javascript/index.html
+++ b/conceptos/javascript/index.html
@@ -9,6 +9,9 @@
 <body>
 	<!-- Voy a obviar partes de JS -->
 
-	<script src="01-variablesydatos.js"></script>
+	<!-- <script src="01-variablesydatos.js"></script> -->
+	<script src="02-funciones.js">
+		
+	</script>
 </body>
 </html>
