--- a/conceptos/javascript/index.html
+++ b/conceptos/javascript/index.html
@@ -10,8 +10,8 @@
 	<!-- Voy a obviar partes de JS -->
 
 	<!-- <script src="01-variablesydatos.js"></script> -->
-	<script src="02-funciones.js">
-		
+	<!-- <script src="02-funciones.js"> -->
+		<script src="03-arreglos.js"></script>
 	</script>
 </body>
 </html>
