--- a/conceptos/javascript/index.html
+++ b/conceptos/javascript/index.html
@@ -11,7 +11,8 @@
 
 	<!-- <script src="01-variablesydatos.js"></script> -->
 	<!-- <script src="02-funciones.js"> -->
-		<script src="03-arreglos.js"></script>
-	</script>
+		<!-- <script src="03-arreglos.js"></script> -->
+		
+	<script src="04-condicionales.js"></script>
 </body>
 </html>
