--- a/conceptos/javascript/index.html
+++ b/conceptos/javascript/index.html
@@ -13,6 +13,7 @@
 	<!-- <script src="02-funciones.js"> -->
 		<!-- <script src="03-arreglos.js"></script> -->
 		
-	<script src="04-condicionales.js"></script>
+	<!-- <script src="04-condicionales.js"></script> -->
+	<script src="05-for.js"></script>
 </body>
 </html>
