--- a/conceptos/javascript/index.html
+++ b/conceptos/javascript/index.html
@@ -14,6 +14,7 @@
 		<!-- <script src="03-arreglos.js"></script> -->
 		
 	<!-- <script src="04-condicionales.js"></script> -->
-	<script src="05-for.js"></script>
+	<!-- <script src="05-for.js"></script> -->
+	<script src="06-objetos.js"></script>
 </body>
 </html>
