--- a/conceptos/javascript/index.html
+++ b/conceptos/javascript/index.html
@@ -15,6 +15,7 @@
 		
 	<!-- <script src="04-condicionales.js"></script> -->
 	<!-- <script src="05-for.js"></script> -->
-	<script src="06-objetos.js"></script>
+	<!-- <script src="06-objetos.js"></script> -->
+	<script src="07-utilizandoobjetos.js"></script>
 </body>
 </html>
