--- a/conceptos/javascript/index.html
+++ b/conceptos/javascript/index.html
@@ -16,6 +16,7 @@
 	<!-- <script src="04-condicionales.js"></script> -->
 	<!-- <script src="05-for.js"></script> -->
 	<!-- <script src="06-objetos.js"></script> -->
-	<script src="07-utilizandoobjetos.js"></script>
+	<!-- <script src="07-utilizandoobjetos.js"></script> -->
+	<script src="08-ejercicio.js"></script>
 </body>
 </html>
