--- a/conceptos/javascript/tareas/tareas.html
+++ b/conceptos/javascript/tareas/tareas.html
@@ -7,6 +7,7 @@
 	<title>Document</title>
 </head>
 <body>
+	<!-- To-Do List -->
 	<!-- id = "DNI", no se puede repetir -->
 	<input 
 		id="inputTarea"
@@ -16,6 +17,8 @@
 	<button
 		id="btnTarea"
 	>
+		Agregar Tarea
+	</button>
 	<div id="contenedor">
 		<!-- nada -->
 	</div>
