--- a/conceptos/javascript/index.html
+++ b/conceptos/javascript/index.html
@@ -19,6 +19,7 @@
 	<!-- <script src="07-utilizandoobjetos.js"></script> -->
 	<!-- <script src="08-ejercicio.js"></script> -->
 	<!-- <script src="09-objetosestandar.js"></script> -->
-	<script src="10-asincronia.js"></script>
+	<!-- <script src="10-asincronia.js"></script> -->
+	<script src="11-asyncawait.js"></script>
 </body>
 </html>
