--- a/conceptos/javascript/index.html
+++ b/conceptos/javascript/index.html
@@ -20,6 +20,7 @@
 	<!-- <script src="08-ejercicio.js"></script> -->
 	<!-- <script src="09-objetosestandar.js"></script> -->
 	<!-- <script src="10-asincronia.js"></script> -->
-	<script src="11-asyncawait.js"></script>
+	<!-- <script src="11-asyncawait.js"></script> -->
+	<script src="12-fetch.js"></script>
 </body>
 </html>
