--- a/index.html
+++ b/index.html
@@ -131,16 +131,19 @@
 
 		<!-- Estructura del Modal -->
 		<!-- modal - parte gris -->
+		<!-- class => css, id=> Javascript -->
 		<div id="miModal" class="modal">
 			<!-- modal-content - contenido del modal -->
-			<span class="cerrar">X</span>
-			<div class="busqueda">
-				<input type="text" id="inputBusqueda" placeholder="Ej. X DINERO">
-				<button class="btn_verde" id="btnBusqueda">Buscar</button>
-			</div>
-			<!-- canciones - van a aparecer las canciones despues -->
-			<div class="canciones" id="divCanciones">
-				
+			<div class="modal-content">
+				<span class="cerrar">X</span>
+				<div class="busqueda">
+					<input type="text" id="inputBusqueda" placeholder="Ej. X DINERO">
+					<button class="btn_verde" id="btnBusqueda">Buscar</button>
+				</div>
+				<!-- canciones - van a aparecer las canciones despues -->
+				<div class="canciones" id="divCanciones">
+
+				</div>
 			</div>
 		</div>
 
