--- a/index.html
+++ b/index.html
@@ -135,7 +135,12 @@
 		<div id="miModal" class="modal">
 			<!-- modal-content - contenido del modal -->
 			<div class="modal-content">
-				<span class="cerrar">X</span>
+				<span 
+				class="cerrar" 
+				id="btnCerrar"
+				>
+					X
+				</span>
 				<div class="busqueda">
 					<input type="text" id="inputBusqueda" placeholder="Ej. X DINERO">
 					<button class="btn_verde" id="btnBusqueda">Buscar</button>
